--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
  body {
   background-color: #e0ffef;
   color: #1aa584;
-  border: 5px dashed #008ab6;
+  border: 5px dashed #00b6af;
   padding: 10px;
   margin: 10px;
   font-family: 'trebuchet ms';
