--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,13 @@ text-align: center;
   text-transform: none;
   }
 
+.maine {
+text-align: center;
+  text-decoration: none;
+  text-indent: 15px;
+  text-transform: none;
+  }
+
  .news {
   background-color: #c6e8ffF;
   color: #000000;
