--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ ul {
   margin: 0;
   padding: 0;
   width: 100%;
-  float: center;
+  margin: auto;
   list-style-type: none;
   display: inline-block;
 }
